# gazebo_build

./: .gitattributes  .gitignore
.marscode/: deviceInfo.json
devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.sh
devel/include/usv_msgs/: RangeBearing.h
devel/include/vrx_gazebo/: BallShooterRequest.h  BallShooterResponse.h  ColorSequenceRequest.h  ColorSequenceResponse.h  Contact.h  Task.h
devel/lib/pkgconfig/: baylands.pc  ksql_airport.pc  mcmillan_airfield.pc  navigation_sim.pc  sand_island.pc  urdf1.pc  urdf_gazebo.pc  usv_gazebo_plugins.pc  usv_msgs.pc  uuv_assistants.pc  uuv_gazebo_worlds.pc  vorc_gazebo.pc  vrx_2019.pc  vrx_gazebo.pc  wamv_description.pc  wamv_gazebo.pc  wave_gazebo.pc  wave_gazebo_plugins.pc  world_build.pc  xacro_study.pc  yosemite_valley.pc
devel/lib/uuv_assistants/: create_new_robot_model  create_thruster_manager_configuration  publish_footprints.py  publish_world_models.py  set_simulation_timer.py  uuv_message_to_tf
devel/lib/vrx_gazebo/: generate_wamv.py  generate_worlds.py  key2thrust_angle.py  twist2thrust.py
src/mini_sandisland/: CMakeLists.txt  package.xml
src/mini_sandisland/config/: custom_rosconsole.conf
src/mini_sandisland/launch/: Model1_1.launch  Model1_2.launch  Model2_0.launch
src/mini_sandisland/models/Model1_1/: model.config  model.sdf
src/mini_sandisland/models/Model1_2/: model.sdf
src/mini_sandisland/models/Model2/: model.sdf
src/mini_sandisland/models/ocean_waves/: model.xacro
src/mini_sandisland/worlds/: Model1_1.world.xacro  Model1_1.xacro  Model1_2.world.xacro  Model1_2.xacro  Model2.world.xacro  Model2.xacro
src/navigation_sim/: CMakeLists.txt
src/navigation_sim/launch/: gmaping.launch  map_read.launch  map_save.launch  move_base.launch
src/navigation_sim/map/: nav.pgm  nav.yaml
src/navigation_sim/rviz/: rviz_config.rviz
src/urdf_gazebo/launch/: car.launch  rviz.launch  test.launch
src/urdf_study/: CMakeLists.txt  package.xml
src/world_build/: CMakeLists.txt
src/xacro_study/: CMakeLists.txt  package.xml
(+59 files in other folders)
